scss/_variables.scss
//Fonts

$main: 'Playfair Display', serif;
$secondary: 'Londrina Outline', serif;

//colors

$yellow: #F3BD52;
$darkGrey: #4B4F55;
$blue: #3E7CB1;
$alphaGrey: #5557;

//responsive size

$desktopSize: 1240px;
$tabletSize: 600px;

